# CapitalPot

./: .gitmodules  CMakeLists.txt  README.md  installGit.sh
cots/: readme  typescript
cots/azure/: CMakeLists.txt
cots/azure-storage-cpp/: includes  libs
cots/gtest/: CMakeLists.txt
cots/log/: CMakeLists.txt
cots/scripts/: installLibbitcoind.sh
cots/scripts/apps/: installChrome.sh  installIonic.sh  installJava.sh  installMongo.sh  installMysql.sh  installPostFix.sh  installSdk.sh
cots/scripts/azure/: install.sh
cots/scripts/bitcoint_install/: compileBT.sh  compileDB.sh  configBitcoind.sh  install.sh  installBitcoind.sh  installDepends.sh
cots/scripts/bitpay/: install.sh  installBitPay.sh  installBitcore-node.sh  installBitcore.sh  installBws.sh  installInsight.sh  log.txt
cots/scripts/copay/: installCopay.sh
cots/scripts/libbitcoin/: installLibbitcoind.sh
cots/scripts/nodejs/: install.sh
cots/scripts/protobuf/: install.sh
src/matching_engine/: CMakeLists.txt  main.cpp
src/matching_engine/cache/: wallet_credentials_cache.h
src/matching_engine/daos/: asset.h  wallet_credentials.h
src/matching_engine/daos/Wallet/: wallet.h
src/matching_engine/daos/bitcoin/: Orders.h  bt_transaction.h
src/matching_engine/logging/: loggable_object.cpp  loggable_object.h
src/matching_engine/messages/: message_processor.cpp  message_processor.h  message_type.h
src/matching_engine/notification/: quotes_update.h  quotes_update_handler.cpp  quotes_update_handler.h
src/matching_engine/order/: OrderType.h
src/matching_engine/proto/: ProtocolMessages.pb.cc  ProtocolMessages.pb.h  ProtocolMessages.proto
src/matching_engine/queue/: BackendQueueProcessor.cpp  BackendQueueProcessor.h  QueueWriter.h
src/matching_engine/queue/transaction/: CashInOut.h  Swap.h  Transaction.h
src/matching_engine/services/: abstract_service.h
src/matching_engine/socket/: ClientHandler.cpp  ClientHandler.h  SocketServer.cpp  SocketServer.h
src/matching_engine/threads/: BaseThread.h
src/webApp/SmallLogin/: config.xml  ionic.project  package.json
src/webApp/SmallLogin/www/: index.html
src/webApp/SmallLogin/www/css/: rates.css  style.css
src/webApp/SmallLogin/www/js/: app.js  controllers.js  routes.js  services.js
src/webApp/SmallLogin/www/templates/: help-about.html  intro.html  login.html  options.html  preference.html  register.html  setting-menu.html  sideMenu.html  tab-locate.html  tab-login.html  tab-rates.html  tab-wallet.html  tabs.html  wallet-home.html
src/webApp/SmallLogin/www/templates/wallet/: history.html  home.html  proposal.html  receive.html  send.html  tab-wallet.html  tabs.html
src/webApp/penny_coin/: bower.json  config.xml  ionic.project  package.json
src/webApp/penny_coin/www/: index.html
src/webApp/penny_coin/www/css/: copay.style.css  style.css
src/webApp/penny_coin/www/js/: app.js  directives.js  filters.js  index.js  routers.js
src/webApp/penny_coin/www/js/controller/: abstract-modal.js  controller.js  menuCtrl.js  ratesCtrl.js  ratesCurrencyCtrl.js  ratesDetailCtrl.js  ratesHistoryCtrl.js  receive.js  send.js  settings.js  userCtrl.js  wallet-home.js  walletCtrl.js
src/webApp/penny_coin/www/js/service/: addresses.js  bitcore.js  config.js  crypto.js  history.js  identity.js  notifications.js  paypro.js  proposals.js  rate.js  service.js  session.js  wallets.js
src/webApp/penny_coin/www/lib/angular-gravatar/: .bower.json
src/webApp/penny_coin/www/lib/angular-mocks/: .bower.json
src/webApp/penny_coin/www/lib/angular-timeago/: .bower.json
src/webApp/penny_coin/www/lib/highcharts/: .bower.json
src/webApp/penny_coin/www/views/: login.html  menu-anon.html  menu-auth.html  menu-bookmarks.html  menu-friends.html  menu-groups.html  menu-setting.html  menu.html  qr.html  settings.html  tab-chat.html  tab-feed.html  tab-trader.html  tabs.html
src/webApp/penny_coin/www/views/message/: tab-message-list.html
src/webApp/penny_coin/www/views/rates/: tab-rates-view.html  tab-rates.html
src/webApp/penny_coin/www/views/user/: register.html
src/webApp/penny_coin/www/views/wallet/: balance.html  receive.html  send-form.html  sent.html  tab-wallet-list.html  tab-wallet.html  wallet-home.html
temp/: CMakeLists.txt
tools/timeseries/: .project  EUR_USD.CSV-OHLC-buy.csv  EUR_USD.CSV-OHLC-sell.csv  EUR_USD.CSV-OHLC.csv  StockPlot.py  ask_stock_price.py  create_OHLC.py  get-intraday-stock.py  google_finance_intraday.py  plot_1_minute.py  plot_stock.py  test_plot.py
